[CHORE] Adicionando configurações da API

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ApiSettings": {
+    "Url": "https://apidev-mbb.t-systems.com.br:8443",
+    "ApiKey": "29452a07-5ff9-4ad3-b472-c7243f548a33",
+    "Schema": "x-api-key"
+  }
 }
